--- a/index.html
+++ b/index.html
@@ -1,12 +1,2 @@
-<h1>Test</h1><pre>Carl Markegång
-
- 1 file changed, 5 insertions(+), 1 deletion(-)
-Carl Markegång
-
- 1 file changed, 1 insertion(+)
-Carl Markegång
-
- 1 file changed, 5 insertions(+), 1 deletion(-)
-Carl Markegång
-
- 1 file changed, 1 insertion(+)
+<h1>Test</h1>
+<div><div><strong>Carl Markegång</strong></div> 1 file changed, 3 insertions(+)<br> 3 files changed, 87 insertions(+)<br> 1 file changed, 5 insertions(+), 1 deletion(-)<br> 1 file changed, 1 insertion(+)<br><div><strong>carlmarkegang</strong></div> 1 file changed, 6 insertions(+)<br></div>
