--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-<h1>Test</h1>
-<div><div><strong>Carl Markegång</strong></div> 1 file changed, 3 insertions(+)<br> 3 files changed, 87 insertions(+)<br> 1 file changed, 5 insertions(+), 1 deletion(-)<br> 1 file changed, 1 insertion(+)<br><div><strong>carlmarkegang</strong></div> 1 file changed, 6 insertions(+)<br></div>
+<h1>Information</h1>
+<div><div><strong>carlmarkegang</strong></div> 1 file changed, 6 insertions(+)<br><br><br><div><strong>Carl Markegång</strong></div> 2 files changed, 50 insertions(+), 44 deletions(-)<br> 1 file changed, 3 insertions(+)<br> 3 files changed, 87 insertions(+)<br> 1 file changed, 5 insertions(+), 1 deletion(-)<br> 1 file changed, 1 insertion(+)<br><br><br></div>
+<style>
+body {
+    margin: 0px;
+}
+
+h1 {
+    padding: 10px;
+    background-color: #181e47;
+    color: white;
+}
+</style>
