--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Information</h1>
-<div><div><strong>carlmarkegang</strong></div> 1 file changed, 6 insertions(+)<br><br><br><div><strong>Carl Markegång</strong></div> 2 files changed, 50 insertions(+), 44 deletions(-)<br> 1 file changed, 3 insertions(+)<br> 3 files changed, 87 insertions(+)<br> 1 file changed, 5 insertions(+), 1 deletion(-)<br> 1 file changed, 1 insertion(+)<br><br><br></div>
+<div><div><strong>Carl Markegång</strong></div> 30 insertions(+)<br> 50 insertions(+)<br> 3 insertions(+)<br> 87 insertions(+)<br> 5 insertions(+)<br> 1 insertion(+)<br>Total insertions: 176<br><br><div><strong>carlmarkegang</strong></div> 6 insertions(+)<br>Total insertions: 6<br><br></div>
 <style>
 body {
     margin: 0px;
