--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <h1>Information</h1>
-<div><div><strong>Carl Markegång</strong></div> 30 insertions(+)<br> 50 insertions(+)<br> 3 insertions(+)<br> 87 insertions(+)<br> 5 insertions(+)<br> 1 insertion(+)<br>Total insertions: 176<br><br><div><strong>carlmarkegang</strong></div> 6 insertions(+)<br>Total insertions: 6<br><br></div>
+<div class="maincontainer"><div><strong>carlmarkegang</strong></div>Total insertions: 6<br><br><div><strong>Carl Markegång</strong></div>Total insertions: 181<br><br></div>
 <style>
 body {
     margin: 0px;
+    font-family: sans-serif;
 }
 
 h1 {
     padding: 10px;
     background-color: #181e47;
     color: white;
+}
+
+.maincontainer{
+    margin:0 auto;
+    width:900px;
 }
 </style>
